<resources>
    <string name="app_name">压路机信息采集系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">主菜单</string>
    <string name="title_activity_connect">设备连接</string>
    <string name="title_activity_new_task">新建任务</string>
    <string name="title_activity_task_info">任务信息</string>
    <string name="title_activity_modify_task">修改任务设置</string>
    <string name="title_activity_setting">系统设置</string>
    <string name="title_activity_staff_modify">账号信息</string>
    <string name="title_activity_staff_manager">账号管理</string>
    <string name="title_activity_admin_modify">管理员信息</string>
    <string name="title_activity_passwd_modify">密码修改</string>
    <string name="title_activity_user">账号信息</string>
    <string name="title_activity_task_modify">任务信息</string>
    <string name="title_activity_task_manager">数据管理</string>
    <string name="title_activity_adjust">相关性校验</string>
    <string name="title_activity_adjust_result">相关性校验结果</string>
    <string name="title_activity_task">任务界面</string>
    <string name="title_activity_test">测试界面</string>
    <string name="title_activity_sensor">AD采集</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="login_login">登录</string>
    <string name="login_anonymous">匿名登录</string>
    <string name="login_admin_login">管理员登录</string>
    <string name="login_common_login">普通登录</string>
    <string name="login_user">账号：</string>
    <string name="login_passwd">密码：</string>
    <string name="menu_connect">设备连接</string>
    <string name="menu_new_task">进入测试</string>
    <string name="menu_manager">数据管理</string>
    <string name="menu_staff">账号管理</string>
    <string name="user_info">账号信息</string>
    <string name="user_name">姓名：</string>
    <string name="user_company">公司：</string>
    <string name="user_admin">（管理员）</string>
    <string name="user_connect_info">设备连接</string>
    <string name="user_connect_status">连接状态：</string>
    <string name="user_connect_mode">连接模式：</string>
    <string name="user_device_name">设备名：</string>
    <string name="user_device_status">设备状态：</string>
    <string name="user_logout">注销</string>
    <string name="user_connect">设备已连接</string>
    <string name="user_not_connect">设备未连接</string>
    <string name="user_normal">正常</string>
    <string name="user_error">异常</string>
    <string name="user_wifi">WIFI</string>
    <string name="user_bt">蓝牙</string>
    <string name="user_anonymous">匿名登录</string>
    <string name="user_"></string>
    <string name="setting_debug">调试模式</string>
    <string name="setting_ftp">FTP设置</string>
    <string name="setting_ftp_ip">IP地址</string>
    <string name="setting_ftp_port">端口</string>
    <string name="setting_ftp_user">用户</string>
    <string name="setting_ftp_passwd">密码</string>
    <string name="setting_wifi">WIFI连接设置</string>
    <string name="setting_wifi_ip">IP地址</string>
    <string name="setting_wifi_port">端口</string>
    <string name="setting_dialog_ftp_ip">FTP地址</string>
    <string name="setting_dialog_ftp_port">FTP端口</string>
    <string name="setting_dialog_ftp_user">FTP账号</string>
    <string name="setting_dialog_ftp_passwd">FTP密码</string>
    <string name="setting_dialog_wifi_ip">WIFI地址</string>
    <string name="setting_dialog_wifi_port">WIFI端口</string>
    <string name="setting_dialog_"></string>
    <string name="connect_sensor">传感器状态</string>
    <string name="connect_resent">重新获取信息</string>
    <string name="connect_disconnect">断开连接</string>
    <string name="connect_device_info">设备信息</string>
    <string name="connect_device_name">设备名</string>
    <string name="connect_version">硬件版本</string>
    <string name="connect_soft_version">软件版本</string>
    <string name="connect_device_status">设备状态</string>
    <string name="connect_temp">温度传感器</string>
    <string name="connect_quake">加速度传感器</string>
    <string name="connect_direction">电子罗盘</string>
    <string name="connect_huoer">霍尔传感器</string>
    <string name="connect_status_normal">运行正常</string>
    <string name="connect_status_error">运行异常</string>
    <string name="connect_wifi">WIFI连接</string>
    <string name="connect_wifi_conencted">WIFI已连接</string>
    <string name="connect_bt">蓝牙连接</string>
    <string name="connect_open_wifi">打开WIFI</string>
    <string name="connect_connect">连接设备</string>
    <string name="connect_wifi_not_open">WIFI尚未开启</string>
    <string name="connect_wifi_opened">WIFI已打开</string>
    <string name="connect_bt_state">打开蓝牙</string>
    <string name="connect_device_list">设备列表</string>
    <string name="connect_normal">正常</string>
    <string name="connect_error">异常</string>
    <string name="connect_"></string>
    <string name="sensor_quake">加速度：</string>
    <string name="sensor_temp">温度：</string>
    <string name="sensor_pulse">脉冲：</string>
    <string name="sensor_heading">heading：</string>
    <string name="sensor_pitch">pitch：</string>
    <string name="sensor_roll">roll:</string>
    <string name="sensor_start">开始</string>
    <string name="sensor_stop">停止</string>
    <string name="task_name">任务名：</string>
    <string name="task_road">公路名：</string>
    <string name="task_status">状态：</string>
    <string name="task_road_width">公路宽：</string>
    <string name="task_road_length">公路长：</string>
    <string name="task_enter_test">进入测试</string>
    <string name="task_test_list">测试列表</string>
    <string name="task_meter">米</string>
    <string name="task_info">基本信息</string>
    <string name="task_info_name">任务名</string>
    <string name="task_info_road_width">公路宽</string>
    <string name="task_info_road_length">公路长</string>
    <string name="task_info_road_info">公路信息</string>
    <string name="task_info_road_name">公路名</string>
    <string name="task_roller_info">转轮信息</string>
    <string name="task_roller_width">轮宽</string>
    <string name="task_roller_diameter">直径</string>
    <string name="task_enter_adjust">进入相关性校验</string>
    <string name="task_origin">车头方向</string>
    <string name="task_anticlockwise">逆时针</string>
    <string name="task_clockwise">顺时针</string>
    <string name="task_not_adjust">任务未进行相关性校验</string>
    <string name="task_no_test">任务尚未进行任何测试</string>
    <string name="task_setting">基本设置</string>
    <string name="task_roller_setting">转轮设置</string>
    <string name="task_road_setting">公路设置</string>
    <string name="task_huoer">霍尔传感器</string>
    <string name="task_ge">个</string>
    <string name="task_save">保存</string>
    <string name="task_save_and_enter_adjust">保存并进入校验</string>
    <string name="task_no_finished_task">未完成任务</string>
    <string name="task_finished_task">完成任务</string>
    <string name="task_task_list">任务列表</string>
    <string name="task_origin_setting">车头方向</string>
    <string name="task_edit">修改信息</string>
    <string name="task_finish">已完成</string>
    <string name="task_not_finish">未完成</string>
    <string name="task_no_adjust">未校验</string>
    <string name="task_finish_task">结束任务</string>
    <string name="task_enter_result">查看结果</string>
    <string name="task_upload">上传结果</string>
    <string name="task_test_time">测试时间：</string>
    <string name="task_total_time">时间：</string>
    <string name="task_distance">路程</string>
    <string name="task_anonymous">匿名用户</string>
    <string name="task_dialog_road_width">公路宽</string>
    <string name="task_dialog_road_length">公路长</string>
    <string name="task_dialog_roller_width">滚轮宽</string>
    <string name="task_dialog_roller_d">滚轮直径</string>
    <string name="task_dialog_huoer_num">霍尔传感器个数</string>
    <string name="task_test">测试</string>
    <string name="staff_name">姓名</string>
    <string name="staff_company">公司</string>
    <string name="staff_admin_list">管理员列表</string>
    <string name="staff_staff_list">账号列表</string>
    <string name="staff_edit_passwd">修改密码</string>
    <string name="staff_logout">注销</string>
    <string name="staff_account">账号名</string>
    <string name="staff_name_m">姓名：</string>
    <string name="staff_company_m">公司：</string>
    <string name="staff_group">部门</string>
    <string name="staff_old_passwd">旧密码</string>
    <string name="staff_new_passwd">密码</string>
    <string name="staff_passwd_again">再输一遍</string>
    <string name="staff_save">保存</string>
    <string name="staff_title_info">账号信息</string>
    <string name="staff_title_modify">账号信息修改</string>
    <string name="staff_title_new">新建账号</string>
    <string name="staff_title_new_passwd">密码设置</string>
    <string name="staff_title_passwd_modify">修改密码</string>
    <string name="staff_"></string>
    <string name="adjust_light">轻度碾压</string>
    <string name="adjust_middle">中度碾压</string>
    <string name="adjust_heavy">重度碾压</string>
    <string name="adjust_auto">自动填充</string>
    <string name="adjust_run">运行</string>
    <string name="adjust_wait">就绪</string>
    <string name="adjust_finish">结束</string>
    <string name="adjust_pause">暂停</string>
    <string name="adjust_status">状态：</string>
    <string name="adjust_position">位置</string>
    <string name="adjust_compact">压实度</string>
    <string name="adjust_"></string>
    <string name="test_trace">轨迹图</string>
    <string name="test_color">色块图</string>
    <string name="test_quake">振动曲线</string>
    <string name="test_temp">温度曲线</string>
    <string name="test_pos_x">坐标X：</string>
    <string name="test_pos_y">坐标Y：</string>
    <string name="test_speed">速度：</string>
    <string name="test_color_row">当前行：</string>
    <string name="test_color_column">当前列：</string>
    <string name="test_color_times">碾压次数：</string>
    <string name="test_status">状态：</string>
    <string name="test_meter">米</string>
    <string name="test_speed_unit">米/秒</string>
    <string name="test_temp_unit">°C</string>
    <string name="test_quake_unit">g</string>
    <string name="test_row">行</string>
    <string name="test_column">列</string>
    <string name="test_times">次</string>
    <string name="test_color_num_unit">块</string>
    <string name="test_not_pass">不合格</string>
    <string name="test_pass">合格</string>
    <string name="test_good">良好</string>
    <string name="test_excellent">优秀</string>
    <string name="test_not_pass_num">不合格（红）：</string>
    <string name="test_pass_num">合格（黄）：</string>
    <string name="test_good_num">良好（蓝）：</string>
    <string name="test_excellent_num">优秀（绿）：</string>
    <string name="test_none">未碾压</string>
    <string name="test_quake_tag">加速度：</string>
    <string name="test_temp_tag">温度：</string>
    <string name="test_user">当前账号：</string>
    <string name="test_task">任务名：</string>
    <string name="test_road">公路名：</string>
    <string name="test_road_width">公路宽：</string>
    <string name="test_road_length">公路长：</string>
    <string name="test_anonymous">匿名用户</string>
    <string name="test_status_state">状态：</string>
    <string name="test_status_time">时间：</string>
    <string name="test_status_temp">温度：</string>
    <string name="test_status_quake">加速度：</string>
    <string name="test_run">运行</string>
    <string name="test_wait">就绪</string>
    <string name="test_pause">暂停</string>
    <string name="test_"></string>
    <string name="alert_leave_adjust">是否离开相关性校验？</string>
    <string name="alert_leave_adjust_result">是否放弃相关性校验结果？</string>
    <string name="alert_delete_admin">是否删除该管理员账号？</string>
    <string name="alert_delete_staff">是否删除该账号？</string>
    <string name="alert_leave_test">是否结束本次测试？</string>
    <string name="alert_delete_task">是否删除该任务？</string>
    <string name="alert_task_list">任务列表</string>
    <string name="alert_new_task">新建任务</string>
    <string name="alert_no_finish">（未完成）</string>
    <string name="alert_no_adjust">（未校验）</string>
    <string name="alert_confirm">确定</string>
    <string name="alert_cancel">取消</string>
    <string name="alert_info">提示</string>
    <string name="alert_no_test">任务尚未进行测试</string>
    <string name="alert_finish_task">是否结束当前任务并生成结果？</string>
</resources>