<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ylj.connect.fragment.WifiConnectFragment">

    <RelativeLayout
        android:layout_gravity="center"
        android:layout_width="400dp"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_wifi_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_wifi_not_open"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/bt_open_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_open_wifi"/>
            <Button
                android:id="@+id/bt_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_connect"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
