<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_common"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            style="@style/CommonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_info_road_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <LinearLayout
                android:id="@+id/layout_road_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="@dimen/common_summary_space"
                    android:layout_height="wrap_content"
                    android:text="@string/task_info_road_width" />

                <TextView
                    style="@style/CommonSummary"
                    android:id="@+id/tv_road_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_meter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_road_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="@dimen/common_summary_space"
                    android:layout_height="wrap_content"
                    android:text="@string/task_info_road_length" />

                <TextView
                    style="@style/CommonSummary"
                    android:id="@+id/tv_road_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_meter" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/CommonTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_roller_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <LinearLayout
                android:id="@+id/layout_roller_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="@dimen/common_summary_space"
                    android:layout_height="wrap_content"
                    android:text="@string/task_info_road_width" />

                <TextView
                    style="@style/CommonSummary"
                    android:id="@+id/tv_roller_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_meter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_roller_diameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="@dimen/common_summary_space"
                    android:layout_height="wrap_content"
                    android:text="@string/task_roller_diameter" />

                <TextView
                    style="@style/CommonSummary"
                    android:id="@+id/tv_roller_diameter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_meter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_huoer_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="@dimen/common_summary_space"
                    android:layout_height="wrap_content"
                    android:text="@string/task_huoer" />

                <TextView
                    style="@style/CommonSummary"
                    android:id="@+id/tv_huoer_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    style="@style/CommonSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_ge" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>