<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vertical"
    tools:context="com.ylj.main.fragment.CommonLoginFragment">

    <RelativeLayout
        style="@style/LoginLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lv_user"
                android:choiceMode="singleChoice"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:layout_height="200dp">

            </ListView>

            <Button
                android:enabled="false"
                android:id="@+id/bt_login"
                style="@style/BlueButton"
                android:text="@string/login_login"/>

            <Button
                android:id="@+id/bt_annoy_login"
                style="@style/BlueButton"
                android:text="@string/login_anonymous"/>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_switch_admin_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_admin_login"
                    android:textColor="@color/backgound_color"
                    android:textSize="20sp"/>
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
