<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ylj.task.TaskModifyActivity"
    tools:showIn="@layout/activity_task_modify">

    <ScrollView
        android:background="@drawable/layout_white"
        android:layout_width="500dp"
        android:padding="20dp"
        android:paddingTop="10dp"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/layout_task_modify_info" />

            <include layout="@layout/layout_task_modify" />

            <include layout="@layout/layout_task_modify_common" />

            <LinearLayout
                android:id="@+id/layout_save_and_adjust"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_save"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_save"/>
                <Button
                    android:id="@+id/btn_save_and_adjust"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_save_and_enter_adjust"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_enter_adjust"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_enter_adjust"
                    style="@style/BlueButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_enter_adjust"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
