<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="50dp" 
    android:paddingRight="20dp" 
    android:paddingBottom="60dp"
    android:background="@color/theme_white"
    android:orientation="vertical" >

    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:textColor="@color/theme_blue"
        android:textSize="@dimen/font_fullscreen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/test_plot_quake" />
    
    <LinearLayout 
        android:paddingTop="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >
        <TextView 
            android:textColor="@color/theme_blue"
            android:textSize="@dimen/font_item"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/test_speed"
            />
        <TextView 
            android:id="@+id/speed_text"
            android:textColor="@color/theme_blue"
            android:layout_width="90dp"
            android:textSize="@dimen/font_item"
        	android:layout_height="wrap_content"
            />
                <TextView 
            android:textColor="@color/theme_blue"
            android:textSize="@dimen/font_item"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/test_quake"
            />
        <TextView 
            android:id="@+id/quake_text"
            android:textColor="@color/theme_blue"
            android:layout_width="90dp"
            android:textSize="@dimen/font_item"
        	android:layout_height="wrap_content"
            />
                <TextView 
            android:textColor="@color/theme_blue"
            android:textSize="@dimen/font_item"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/test_temp"
            />
        <TextView 
            android:id="@+id/temp_text"
            android:textColor="@color/theme_blue"
            android:layout_width="90dp"
            android:textSize="@dimen/font_item"
        	android:layout_height="wrap_content"
            />
    </LinearLayout>
        <ylj.common.widget.PlotView
        android:id="@+id/plotview"       
        android:layout_width="match_parent"
    	android:layout_height="match_parent"/>

</LinearLayout>
